[icalendar] Modernized code and applied most suggestions by @cheinema
Thank you for your review, @cheinema!
It was required to update the tests as the comparison of events is now more exact.

Signed-off-by: Michael Wodniok <michi@noorganization.org>